internal/gatewayapi/testdata/extensions/extensionpolicy-with-grpcroute-target.out.yaml
extensionServerPolicies:
- apiVersion: foo.example.io/v1alpha1
  kind: Bar
  metadata:
    name: policy-1
    namespace: default
  spec:
    data: attached to a grpcroute
    targetRef:
      group: gateway.networking.k8s.io
      kind: GRPCRoute
      name: grpcroute-1
  status:
    ancestors:
    - ancestorRef:
        group: gateway.networking.k8s.io
        kind: Gateway
        name: gateway-1
        namespace: envoy-gateway
        sectionName: http
      conditions:
      - lastTransitionTime: null
        message: Policy has been accepted.
        reason: Accepted
        status: "True"
        type: Accepted
      controllerName: gateway.envoyproxy.io/gatewayclass-controller
gateways:
- apiVersion: gateway.networking.k8s.io/v1
  kind: Gateway
  metadata:
    name: gateway-1
    namespace: envoy-gateway
  spec:
    gatewayClassName: envoy-gateway-class
    listeners:
    - allowedRoutes:
        namespaces:
          from: All
      name: http
      port: 80
      protocol: HTTP
  status:
    listeners:
    - attachedRoutes: 1
      conditions:
      - lastTransitionTime: null
        message: Sending translated listener configuration to the data plane
        reason: Programmed
        status: "True"
        type: Programmed
      - lastTransitionTime: null
        message: Listener has been successfully translated
        reason: Accepted
        status: "True"
        type: Accepted
      - lastTransitionTime: null
        message: Listener references have been resolved
        reason: ResolvedRefs
        status: "True"
        type: ResolvedRefs
      name: http
      supportedKinds:
      - group: gateway.networking.k8s.io
        kind: HTTPRoute
      - group: gateway.networking.k8s.io
        kind: GRPCRoute
grpcRoutes:
- apiVersion: gateway.networking.k8s.io/v1alpha2
  kind: GRPCRoute
  metadata:
    name: grpcroute-1
    namespace: default
  spec:
    hostnames:
    - grpc.example.com
    parentRefs:
    - name: gateway-1
      namespace: envoy-gateway
      sectionName: http
    rules:
    - backendRefs:
      - name: service-1
        port: 8080
      matches:
      - method:
          service: com.example.Service
          type: Exact
  status:
    parents:
    - conditions:
      - lastTransitionTime: null
        message: Route is accepted
        reason: Accepted
        status: "True"
        type: Accepted
      - lastTransitionTime: null
        message: Resolved all the Object references for the Route
        reason: ResolvedRefs
        status: "True"
        type: ResolvedRefs
      controllerName: gateway.envoyproxy.io/gatewayclass-controller
      parentRef:
        name: gateway-1
        namespace: envoy-gateway
        sectionName: http
infraIR:
  envoy-gateway/gateway-1:
    proxy:
      listeners:
      - name: envoy-gateway/gateway-1/http
        ports:
        - containerPort: 10080
          name: http-80
          protocol: HTTP
          servicePort: 80
      metadata:
        labels:
          gateway.envoyproxy.io/owning-gateway-name: gateway-1
          gateway.envoyproxy.io/owning-gateway-namespace: envoy-gateway
        ownerReference:
          kind: GatewayClass
          name: envoy-gateway-class
      name: envoy-gateway/gateway-1
      namespace: ""
xdsIR:
  envoy-gateway/gateway-1:
    accessLog:
      json:
      - path: /dev/stdout
    extensionResources:
    - name: foo.example.io/bar/default/policy-1
      object:
        apiVersion: foo.example.io/v1alpha1
        kind: Bar
        metadata:
          name: policy-1
          namespace: default
        spec:
          data: attached to a grpcroute
          targetRef:
            group: gateway.networking.k8s.io
            kind: GRPCRoute
            name: grpcroute-1
        status:
          ancestors:
          - ancestorRef:
              group: gateway.networking.k8s.io
              kind: Gateway
              name: gateway-1
              namespace: envoy-gateway
              sectionName: http
            conditions:
            - lastTransitionTime: null
              message: Policy has been accepted.
              reason: Accepted
              status: "True"
              type: Accepted
            controllerName: gateway.envoyproxy.io/gatewayclass-controller
    globalResources:
      proxyServiceCluster:
        metadata:
          kind: Service
          name: envoy-envoy-gateway-gateway-1-196ae069
          sectionName: "8080"
        name: envoy-gateway/gateway-1
        settings:
        - addressType: IP
          endpoints:
          - host: 7.6.5.4
            port: 8080
            zone: zone1
          metadata:
            kind: Service
            name: envoy-envoy-gateway-gateway-1-196ae069
            sectionName: "8080"
          name: envoy-gateway/gateway-1
          protocol: TCP
    http:
    - address: 0.0.0.0
      externalPort: 80
      grpc:
        enableGRPCStats: true
        enableGRPCWeb: true
      hostnames:
      - '*'
      metadata:
        kind: Gateway
        name: gateway-1
        namespace: envoy-gateway
        sectionName: http
      name: envoy-gateway/gateway-1/http
      path:
        escapedSlashesAction: UnescapeAndRedirect
        mergeSlashes: true
      port: 10080
      routes:
      - destination:
          metadata:
            kind: GRPCRoute
            name: grpcroute-1
            namespace: default
          name: grpcroute/default/grpcroute-1/rule/0
          settings:
          - addressType: IP
            endpoints:
            - host: 7.7.7.7
              port: 8080
            metadata:
              kind: Service
              name: service-1
              namespace: default
              sectionName: "8080"
            name: grpcroute/default/grpcroute-1/rule/0/backend/0
            protocol: GRPC
            weight: 1
        extensionServerPolicies:
        - name: foo.example.io/bar/default/policy-1
        hostname: grpc.example.com
        isHTTP2: true
        metadata:
          kind: GRPCRoute
          name: grpcroute-1
          namespace: default
        name: grpcroute/default/grpcroute-1/rule/0/match/0/grpc_example_com
        pathMatch:
          distinct: false
          name: ""
          prefix: /com.example.Service
    readyListener:
      address: 0.0.0.0
      ipFamily: IPv4
      path: /ready
      port: 19003
